--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
         background: white;
         padding: 2rem;
         border-radius: 12px;
-        box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+        box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
         text-align: center;
-        max-width: 400px;
+        max-width: 500px;
+        width: 100%;
       }
       .avatar {
         width: 100px;
@@ -35,34 +36,47 @@
       }
       .subtitle {
         font-size: 1rem;
-        color: #555;
         margin-bottom: 1.5rem;
+        color: #666;
       }
-      .starters button {
-        margin: 0.25rem;
-        padding: 0.5rem 1rem;
+      textarea {
+        width: 100%;
+        padding: 1rem;
         font-size: 1rem;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        margin-bottom: 1rem;
+        resize: none;
+      }
+      button {
+        width: 100%;
+        background-color: #4e73df;
+        color: white;
+        font-size: 1rem;
+        padding: 0.75rem;
         border: none;
-        background-color: #ececec;
         border-radius: 8px;
         cursor: pointer;
       }
-      .starters button:hover {
-        background-color: #dcdcdc;
+      .response {
+        margin-top: 1rem;
+        background-color: #eef3ff;
+        padding: 1rem;
+        border-radius: 8px;
+        text-align: left;
       }
     </style>
   </head>
   <body>
     <div class="emma-card">
-      <img src="https://i.imgur.com/YOUR_EMMA_IMAGE.jpg" alt="Emma Avatar" class="avatar" />
+      <img src="https://i.imgur.com/your-emma-image.jpg" alt="Emma Avatar" class="avatar" />
       <h1 class="title">Emma</h1>
       <p class="subtitle">A warm, gentle assistant for seniors offering clear, simple help and companionship.</p>
-      <div class="starters">
-        <button>What appointments do I have today?</button>
-        <button>Can you remind me to take my medicine at 8pm?</button>
-        <button>What's the weather like tomorrow?</button>
-        <button>Can we chat for a bit?</button>
-      </div>
+      <textarea id="question" rows="3" placeholder="Ask Emma something..."></textarea>
+      <button onclick="askEmma()">Ask Emma</button>
+      <div id="response" class="response"></div>
     </div>
-  </body>
-</html>
+
+    <script>
+      async function askEmma() {
+        const question = document.getElementById("question
