--- a/index.html
+++ b/index.html
@@ -14,17 +14,15 @@
       height: 100vh;
       margin: 0;
     }
-
     .emma-card {
       background: white;
       padding: 2rem;
       border-radius: 12px;
-      box-shadow: 0 5px 20px rgba(0,0,0,0.1);
+      box-shadow: 0 5px 20px rgba(0, 0, 0, 0.1);
       text-align: center;
-      max-width: 500px;
+      max-width: 400px;
       width: 100%;
     }
-
     .avatar {
       width: 100px;
       height: 100px;
@@ -32,43 +30,17 @@
       object-fit: cover;
       margin-bottom: 1rem;
     }
-
-    h1 {
-      font-size: 1.8rem;
+    .title {
+      font-size: 1.5rem;
       margin-bottom: 0.5rem;
     }
-
-    p.subtitle {
-      color: #555;
+    .subtitle {
+      font-size: 1rem;
+      color: #666;
       margin-bottom: 1.5rem;
     }
-
     textarea {
       width: 100%;
-      padding: 1rem;
+      padding: 0.75rem;
       font-size: 1rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      margin-bottom: 1rem;
-      resize: none;
-    }
-
-    button {
-      background-color: #4e79ff;
-      color: white;
-      padding: 0.75rem 1.5rem;
-      font-size: 1rem;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      width: 100%;
-    }
-
-    #response {
-      margin-top: 1rem;
-      background-color: #eef3ff;
-      padding: 1rem;
-      border-radius: 8px;
-      min-height: 50px;
-    }
-  </style>
+      ma
