--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@
 </head>
 <body>
   <div class="emma-card">
-    <img src="https://i.imgur.com/YOUR_EMMA_IMAGE.jpg" alt="Emma Avatar" class="avatar" />
+    <img src="https://i.imgur.com/<img src="https://i.imgur.com/NM8T2gL.png" alt="Emma Avatar" class="avatar" />
+" alt="Emma Avatar" class="avatar" />
     <h1 class="title">Emma</h1>
     <p class="subtitle">A warm, gentle assistant for seniors offering clear, simple help and companionship.</p>
 
